Fix CRITICAL frontend-backend integration issues
1. CORS: Change wildcard to localhost patterns (can't use * with credentials)
2. AuthResponse: Flatten structure to match frontend expectations
   - Frontend expects: {token, type, id, username, email, ...}
   - Was returning: {token, type, user: {id, username, ...}}
3. AuthServiceImpl: Build flattened AuthResponse in login/register

These fixes resolve authentication and CORS errors.